--- a/news/templates/news/article_containers.html
+++ b/news/templates/news/article_containers.html
@@ -1,7 +1,8 @@
 <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
     <div class="article">
-
+        {% if article.image %}
         <img src="{{ article.image.url }}" alt="" class="article-img-top">
+        {% endif %}
 
         <div class="article-body d-flex flex-column">
             <div class="d-flex justify-content-between mb-3">
